tests/error/experimental_errors/partial_function.err
Error: Experimental feature (at $FILE:17:14)
   | 
15 | def main() -> None:
16 |     t = MyStruct()
17 |     takes_int(t.will_be_partial)
   |               ^^^^^^^^^^^^^^^^^ Partial functions are an experimental feature

Help: Experimental features are currently disabled. You can enable them by
calling `guppylang.enable_experimental_features()`, however note that these
features are unstable and might break in the future.

Guppy compilation failed due to 1 previous error
